# automea_test

./: README.md  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
automea/: __init__.py  analyseMEA.py  automea.py
automea/training/: models.py
automea_test/: __init__.py  __main__.py  util.py
automea_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/automea_test/: __init__.py
src/automea_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/automea_test/models/: signal100.h5
tutorials/: generate_raster.ipynb  generate_raster.py
tutorials/plots3/MJ22C001-1799_DIV14-001.h5_B3/rasters/: raster_start171_duration60_allwell_manual.eps  raster_start171_duration60_allwell_prednetreverbs.eps  raster_start171_duration60_zoomedstart371_zoomedduration5_manual.eps  raster_start171_duration60_zoomedstart371_zoomedduration5_prednetreverbs.eps  raster_start171_duration60_zoomedstart397_zoomedduration5_manual.eps  raster_start171_duration60_zoomedstart397_zoomedduration5_prednetreverbs.eps  raster_start171_duration60_zoomedstart422_zoomedduration5_manual.eps  raster_start171_duration60_zoomedstart422_zoomedduration5_prednetreverbs.eps  raster_start427_duration60_allwell_manual.eps  raster_start427_duration60_allwell_prednetreverbs.eps  raster_start427_duration60_zoomedstart878_zoomedduration5_manual.eps  raster_start427_duration60_zoomedstart878_zoomedduration5_prednetreverbs.eps  raster_start427_duration60_zoomedstart892_zoomedduration5_manual.eps  raster_start427_duration60_zoomedstart892_zoomedduration5_prednetreverbs.eps  (+10 more)
(+108 files in other folders)
