[project]
name = "automea_test"
version = "0.0.5"
authors = [
  { name="Vinicius Hernandes", email="viniciusfhernandes@gmail.com" },
]
description = "Automated analysis of MEA datasets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vfhernandes/automea_test"
